<resources>
    <string name="app_name">红外采集器</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="fastsetting">快速配置</string>
    <string name="scjq">SOLARMAN采集器</string>
    <string name="inputxlh">输入序列号</string>
    <string name="pinputxlh">请输入序列号</string>
    <string name="xlh">序列号</string>
    <string name="now_sn">当前采集器SN</string>
    <string name="pp_db">已匹配电表</string>
    <string name="add_db">添加电表</string>
    <string name="edit_db">编辑电表</string>
    <string name="delete_db">删除电表</string>
    <string name="sure_delete">确定删除</string>
    <string name="sure_delete_db">确定要删除设备吗?</string>
    <string name="look_db">查看数据</string>
    <string name="first_step">第一步、检查红外接口</string>
    <string name="second_step">第二步、安装位置确认</string>
    <string name="third_step">第三步、接线方案</string>
    <string name="forth_step">第四步、抄读两台电表</string>
    <string name="fifth_step">第五步、走线安排</string>
    <string name="sixth_step">第六步、设备安装</string>
    <string name="seventh_step">第七步、导轨电源与采集器</string>
    <string name="eighth_step">第八步、确认通信成功</string>
    <string name="check_integer">检查红外接口</string>
    <string name="install_address_sure">安装位置确认</string>
    <string name="next_sure">下一步 安装位置确认</string>
    <string name="next_sure2">下一步 接线方案</string>
    <string name="next_sure3">下一步 连接两台电表</string>
    <string name="next_sure4">下一步 走线安排</string>
    <string name="next_sure5">下一步 设备安装</string>
    <string name="next_sure6">下一步 导轨电源与采集器</string>
    <string name="next_sure7">下一步 确认通信成功</string>
    <string name="next_sure8">开始电表配置</string>
    <string name="sure">确认</string>
    <string name="back">返回</string>
    <string name="setting_fail">配置未完成</string>
    <string name="setting_success">配置完成</string>
    <string name="setting_db">配置电表</string>
    <string name="five_loading">数据上传,请耐心等待</string>
    <string name="none_data">无数据</string>
    <string name="data_success">数据上传成功</string>
    <string name="none_data_msg">请确认电表编号与安装位置是否准确</string>
    <string name="check_data">数据校验</string>
    <string name="know">我知道了</string>
    <string name="pleasecheck">请务必校验正向有功总电能是否准确</string>
    <string name="zxygdn">正向有功总电能</string>
    <string name="fxygdn">组合有功总电能</string>
    <string name="Axygdn">A向正向有功电能</string>
    <string name="Bxygdn">B正向有功电能</string>
    <string name="Cxygdn">C正向有功电能</string>
    <string name="num_mobile">4001810512</string>
    <string name="gdxc">固定线材</string>
</resources>
