<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_radius"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <TextView
        android:id="@+id/tv_db_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:gravity="center"
        android:textSize="@dimen/x18"
        android:textColor="@color/black"
        android:text="@string/edit_db"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/sure_delete_db"/>
        <EditText
            android:id="@+id/ed_text"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:background="@null"
            android:inputType="number"
            android:textSize="@dimen/x16"
            android:hint="重新输入电表编号"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sure"/>
    </LinearLayout>

</LinearLayout>