<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true">
    <include layout="@layout/layout_title_back" android:id="@+id/title_layout" />
    <RelativeLayout
        android:layout_below="@id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/x18">

        <ImageView
            android:id="@+id/iv_unfinish"
            android:layout_width="@dimen/x80"
            android:layout_height="@dimen/x80"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/x100"
            android:src="@mipmap/unfinish"/>
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_fail"
            android:layout_below="@id/iv_unfinish"
            android:layout_marginTop="@dimen/x18"
            android:layout_centerHorizontal="true"
            />
        <RelativeLayout
            android:layout_below="@id/tv_status"
            android:padding="@dimen/x20"
            android:layout_marginTop="@dimen/x42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="match_parent"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:max="100"
                android:progressDrawable="@drawable/progress_blue"
                android:layout_height="@dimen/x8" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/progressbar"
                android:layout_marginTop="@dimen/x12"
                android:text="@string/five_loading"/>
        </RelativeLayout>
        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x42"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/x25"
            android:background="@drawable/btn_blue"
            android:text="@string/back"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>