<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/bg_screen"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <include layout="@layout/layout_title_back" android:id="@+id/title_layout" />
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x52"
        android:padding="@dimen/x12"
        android:background="@color/white"
        android:layout_marginTop="@dimen/x18"
        android:layout_below="@id/title_layout">
        <TextView
            android:id="@+id/now_sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_sn"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/x16"/>
        <ImageView
            android:id="@+id/sys"
            android:layout_width="@dimen/x18"
            android:layout_height="@dimen/x18"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/sys"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/x14"
        android:padding="@dimen/x12"
        android:layout_below="@id/rl1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_pp_db"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x25"
            android:text="@string/pp_db"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tv_add_db"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x25"
            android:text="@string/add_db"/>
        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x25">
            <TextView
                android:id="@+id/tv_db_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="12312123123312"/>
            <EditText
                android:id="@+id/et_db1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:textSize="@dimen/x16"
                android:hint="请输入电表编号"/>
            <ImageView
                android:id="@+id/more1"
                android:layout_width="@dimen/x18"
                android:layout_height="@dimen/x18"
                android:layout_alignParentRight="true"
                android:src="@mipmap/more"
                />
            <ImageView
                android:id="@+id/review1"
                android:layout_width="@dimen/x20"
                android:layout_height="@dimen/x20"
                android:layout_alignParentRight="true"
                android:src="@mipmap/review"
                android:visibility="gone"
                />
            <ImageView
                android:id="@+id/add1"
                android:layout_width="@dimen/x18"
                android:layout_height="@dimen/x18"
                android:layout_toLeftOf="@id/more1"
                android:layout_marginRight="@dimen/x12"
                android:src="@mipmap/add"
                />

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/x25"
                android:text="@string/add_db"/>

            <RelativeLayout
                android:id="@+id/rl3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x25">
                <TextView
                    android:id="@+id/tv_db_num2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12312123123312"
                    android:visibility="gone"/>
                <EditText
                    android:id="@+id/et_db2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="@dimen/x16"
                    android:inputType="number"
                    android:hint="请输入电表编号"/>
                <ImageView
                    android:id="@+id/more2"
                    android:layout_width="@dimen/x18"
                    android:layout_height="@dimen/x18"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/more"
                    android:visibility="gone"
                    />
                <ImageView
                    android:id="@+id/review2"
                    android:layout_width="@dimen/x18"
                    android:layout_height="@dimen/x18"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/review"

                    />
                <ImageView
                    android:id="@+id/delete2"
                    android:layout_width="@dimen/x18"
                    android:layout_height="@dimen/x18"
                    android:layout_toLeftOf="@id/review2"
                    android:layout_marginRight="@dimen/x12"
                    android:src="@mipmap/delete"
                    />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x42"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/x25"
        android:background="@drawable/btn_blue"
        android:text="@string/sure"
        android:textColor="@color/white" />
</RelativeLayout>