<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <include layout="@layout/layout_title_back"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x30"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/x10"
            android:gravity="center_vertical"
            android:text="@string/pleasecheck"
            />
        <ImageView
            android:id="@+id/review"
            android:layout_width="@dimen/x16"
            android:layout_height="@dimen/x16"
            android:layout_marginLeft="@dimen/x16"
            android:src="@mipmap/hques"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingRight="@dimen/x10"
        android:paddingLeft="@dimen/x10">
        <TextView
            android:id="@+id/tv_db1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical"
            android:textSize="@dimen/x18"
            android:text="正在从电表001515111读取数据"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zxygdn"/>
            <TextView
                android:id="@+id/zxygdn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="--kWh"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fxygdn"/>
            <TextView
                android:id="@+id/fxygdn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="--kWh"/>
        </RelativeLayout>
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Axygdn"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="--kWh"/>
        </RelativeLayout>
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bxygdn"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="--kWh"/>
        </RelativeLayout>
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cxygdn"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="--kWh"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingRight="@dimen/x10"
        android:paddingLeft="@dimen/x10">
        <TextView
            android:id="@+id/tv_db2"
            android:layout_marginTop="@dimen/x18"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical"
            android:textSize="@dimen/x18"
            android:text="正在从电表001515111读取数据"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zxygdn"/>
            <TextView
                android:id="@+id/zxygdn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="--kWh"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fxygdn"/>
            <TextView
                android:id="@+id/fxygdn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="--kWh"/>
        </RelativeLayout>
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Axygdn"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="--kWh"/>
        </RelativeLayout>
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bxygdn"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="--kWh"/>
        </RelativeLayout>
        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:gravity="center_vertical"
            android:background="@drawable/bottom_line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cxygdn"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="--kWh"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x42"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/x25"
            android:orientation="horizontal">
            <Button
                android:id="@+id/pass"
                android:layout_width="0dp"
                android:layout_height="@dimen/x40"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@drawable/btn_blue1"
                android:layout_marginLeft="@dimen/x8"
                android:layout_marginRight="@dimen/x8"
                android:text="校验通过"/>
            <Button
                android:id="@+id/call"
                android:layout_width="0dp"
                android:layout_height="@dimen/x40"
                android:layout_weight="1"
                android:textColor="@color/blue"
                android:background="@drawable/btn_white"
                android:layout_marginLeft="@dimen/x8"
                android:layout_marginRight="@dimen/x8"
                android:text="联系维护"/>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>